Use github team for code owners of EaaS
Signed-off-by: Alex Misstear <amisstea@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -82,19 +82,19 @@
 # renovate groupName=preflight
 /task/ecosystem-cert-preflight-checks   @acornett21 @bcrochet @komish @skattoju
 
-# maitained in tekton-tools, thus should be ignored by renovate
+# maintained in tekton-tools, thus should be ignored by renovate
 /task/provision-env-with-ephemeral-namespace    @amisstea @avi-biton @gbenhaim @omeramsc @yftacherzog
 /task/generate-odcs-compose @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/rpms-signature-scan   @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/verify-signed-rpms    @amisstea @avi-biton @gbenhaim @yftacherzog
 
 # renovate groupName=eaas
-/stepactions/eaas-copy-secrets-to-ephemeral-cluster         @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
-/stepactions/eaas-create-ephemeral-cluster-hypershift-aws   @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
-/stepactions/eaas-get-ephemeral-cluster-credentials         @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
-/stepactions/eaas-get-latest-openshift-version-by-prefix    @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
-/stepactions/eaas-get-supported-ephemeral-cluster-versions  @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
-/task/eaas-provision-space                                  @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
+/stepactions/eaas-copy-secrets-to-ephemeral-cluster         @konflux-ci/eaas-maintainers
+/stepactions/eaas-create-ephemeral-cluster-hypershift-aws   @konflux-ci/eaas-maintainers
+/stepactions/eaas-get-ephemeral-cluster-credentials         @konflux-ci/eaas-maintainers
+/stepactions/eaas-get-latest-openshift-version-by-prefix    @konflux-ci/eaas-maintainers
+/stepactions/eaas-get-supported-ephemeral-cluster-versions  @konflux-ci/eaas-maintainers
+/task/eaas-provision-space                                  @konflux-ci/eaas-maintainers
 
 # renovate groupName=sealights
 /task/sealights-go-oci-ta          @ascerra @flacatus @psturc @Dannyb48
