buildah/0.3: deprecate on 31st March 2025
Deprecate version 0.3 on 31st March 2025 (a Monday), roughly two months
after the release of 0.4.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah/0.3/buildah.yaml
+++ b/task/buildah/0.3/buildah.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/version: "0.2.1"
     build.appstudio.redhat.com/build_type: "docker"
   annotations:
+    build.appstudio.redhat.com/expires-on: "2025-03-31T00:00:00Z"
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "image-build, konflux"
   name: buildah
