sast-coverity-check: re-base on buildah/0.4
Base the task on buildah 0.4 rather than 0.3, to avoid inheriting the
deprecation annotation. And fix the version label in the task.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/sast-coverity-check/0.2/patch.yaml
+++ b/task/sast-coverity-check/0.2/patch.yaml
@@ -3,6 +3,11 @@
   path: /metadata/name
   value: sast-coverity-check
 
+# Task version
+- op: replace
+  path: /metadata/labels/app.kubernetes.io~1version
+  value: "0.2"
+
 # Task description
 - op: replace
   path: /spec/description
