--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -5,7 +5,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: 0.2.1
+    app.kubernetes.io/version: "0.2"
     build.appstudio.redhat.com/build_type: docker
   name: sast-coverity-check
 spec:
@@ -125,7 +125,7 @@ spec:
       to fail if enabled
     name: SKIP_SBOM_GENERATION
     type: string
-  - default: cyclonedx
+  - default: spdx
     description: 'Select the SBOM format to generate. Valid values: spdx, cyclonedx.
       Note: the SBOM from the prefetch task - if there is one - must be in the same
       format.'
