--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: 0.2.1
+    app.kubernetes.io/version: "0.2"
     build.appstudio.redhat.com/build_type: docker
 spec:
   description: Scans source code for security vulnerabilities, including common
@@ -116,7 +116,7 @@ spec:
         cyclonedx. Note: the SBOM from the prefetch task - if there is one
         - must be in the same format.'
       type: string
-      default: cyclonedx
+      default: spdx
     - name: SKIP_SBOM_GENERATION
       description: Skip SBOM-related operations. This will likely cause EC
         policies to fail if enabled
