Fix jq syntax error in prefetch-dependencies tasks
prefetch-dependencies has been changed recently and is currently failing
on a jq syntax error

Allowing if without else-branch in jq seems to not be implemented in jq
1.6, which is used in the cachi2 image used in the prefetch-dependencies
tasks

Add an else branch with '.' (identity) to fix the syntax error

Signed-off-by: Tomáš Nevrlka <tnevrlka@redhat.com>

rh-pre-commit.version: 2.3.2
rh-pre-commit.check-secrets: ENABLED

--- a/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
@@ -285,6 +285,8 @@ spec:
                         else
                           if has("include_summary_in_sbom") | not then
                             .include_summary_in_sbom = true
+                          else
+                            .
                           end
 
                         end' <<<"$input")"
