--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -285,6 +285,8 @@ spec:
                         else
                           if has("include_summary_in_sbom") | not then
                             .include_summary_in_sbom = true
+                          else
+                            .
                           end
 
                         end' <<<"$input")"
