--- a/pipelines/tekton-bundle-builder/tekton-bundle-builder.yaml
+++ b/pipelines/tekton-bundle-builder/tekton-bundle-builder.yaml
@@ -199,6 +199,36 @@ spec:
     workspaces:
     - name: source
       workspace: workspace
+  - name: coverity-availability-check
+    runAfter:
+    - build-image-index
+    taskRef:
+      name: coverity-availability-check
+      version: "0.2"
+    when:
+    - input: $(params.skip-checks)
+      operator: in
+      values:
+      - "false"
+  - name: sast-shell-check
+    params:
+    - name: image-digest
+      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
+    - name: image-url
+      value: $(tasks.build-image-index.results.IMAGE_URL)
+    runAfter:
+    - build-image-index
+    taskRef:
+      name: sast-shell-check
+      version: "0.1"
+    when:
+    - input: $(params.skip-checks)
+      operator: in
+      values:
+      - "false"
+    workspaces:
+    - name: workspace
+      workspace: workspace
   - name: sast-unicode-check
     params:
     - name: image-url
@@ -225,40 +255,6 @@ spec:
     taskRef:
       name: apply-tags
       version: "0.1"
-  - name: push-dockerfile
-    params:
-    - name: IMAGE
-      value: $(tasks.build-image-index.results.IMAGE_URL)
-    - name: IMAGE_DIGEST
-      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
-    - name: DOCKERFILE
-      value: $(params.dockerfile)
-    - name: CONTEXT
-      value: $(params.path-context)
-    runAfter:
-    - build-image-index
-    taskRef:
-      name: push-dockerfile
-      version: "0.1"
-    workspaces:
-    - name: workspace
-      workspace: workspace
-  - name: rpms-signature-scan
-    params:
-    - name: image-url
-      value: $(tasks.build-image-index.results.IMAGE_URL)
-    - name: image-digest
-      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
-    runAfter:
-    - build-image-index
-    taskRef:
-      name: rpms-signature-scan
-      version: "0.2"
-    when:
-    - input: $(params.skip-checks)
-      operator: in
-      values:
-      - "false"
   workspaces:
   - name: workspace
   - name: git-auth
