chore(KFLUXVNGD-194): remove coverity checks from tekton-bundle-builder
Remove `coverity-availability-check` task
Remove `sast-coverity-check` task

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/pipelines/tekton-bundle-builder/patch.yaml
+++ b/pipelines/tekton-bundle-builder/patch.yaml
@@ -46,6 +46,10 @@
 - op: remove
   path: /spec/tasks/16  # push-dockerfile
 - op: remove
+  path: /spec/tasks/12  # coverity-availability-check
+- op: remove
+  path: /spec/tasks/11  # sast-coverity-check
+- op: remove
   path: /spec/tasks/10  # clamav-scan
 - op: remove
   path: /spec/tasks/9   # sast-snyk-check
