sast-coverity-check: use shell form of RUN instructions
... while instrumenting `Containerfile` because the exec form is
not supported by the `cachi2` instrumentation implemented in the
`build-container` task, which `sast-coverity-check` is derived from.

Note that EC policy exception needs to be updated whenever we update
the reference to the `coverity` image.  Otherwise the CI fails with
misleading message about signatures of RPM packages:
```
- result: RPMS_DATA
        task: rpms-signature-scan
success: false
```

Related: https://issues.redhat.com/browse/KONFLUX-6806
Resolves: https://issues.redhat.com/browse/OSH-809

--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -271,7 +271,7 @@ spec:
         - $(params.SOURCE_ARTIFACT)=/var/workdir/source
         - $(params.CACHI2_ARTIFACT)=/var/workdir/cachi2
     - name: prepare
-      image: quay.io/redhat-services-prod/sast/coverity:202412.2
+      image: quay.io/redhat-services-prod/sast/coverity:202412.3
       workingDir: /var/workdir
       volumeMounts:
         - mountPath: /etc/secrets/cov
@@ -367,7 +367,7 @@ spec:
         chmod -v 0755 /shared/cmd-wrap.sh
 
         # instrument all RUN lines in Dockerfile to be executed through cmd-wrap.sh
-        cstrans-df-run --verbose /shared/cmd-wrap.sh <"$dockerfile_path" >/shared/Containerfile 2>/tmp/cstrans-df-run.log
+        cstrans-df-run --shell-form --verbose /shared/cmd-wrap.sh <"$dockerfile_path" >/shared/Containerfile 2>/tmp/cstrans-df-run.log
         EC=$?
 
         # if we have no RUN lines to instrument, it is not a reason to make the task fail
@@ -378,7 +378,7 @@ spec:
           exit $EC
         fi
     - name: build
-      image: quay.io/redhat-services-prod/sast/coverity:202412.2
+      image: quay.io/redhat-services-prod/sast/coverity:202412.3
       args:
         - --build-args
         - $(params.BUILD_ARGS[*])
@@ -709,7 +709,7 @@ spec:
           add:
             - SETFCAP
     - name: postprocess
-      image: quay.io/redhat-services-prod/sast/coverity:202412.2
+      image: quay.io/redhat-services-prod/sast/coverity:202412.3
       workingDir: /var/workdir
       volumeMounts:
         - mountPath: /mnt/trusted-ca
