--- a/task/sast-coverity-check/0.2/patch.yaml
+++ b/task/sast-coverity-check/0.2/patch.yaml
@@ -71,7 +71,7 @@
 - op: replace
   path: /spec/steps/0/image
   # New image shoould be based on quay.io/konflux-ci/buildah-task:latest or have all the tooling that the original image has.
-  value: quay.io/redhat-services-prod/sast/coverity:202412.2
+  value: quay.io/redhat-services-prod/sast/coverity:202412.3
 
 # Change build step resources
 - op: replace
@@ -161,7 +161,7 @@
   path: /spec/steps/0
   value:
     name: prepare
-    image: quay.io/redhat-services-prod/sast/coverity:202412.2
+    image: quay.io/redhat-services-prod/sast/coverity:202412.3
     workingDir: $(workspaces.source.path)
     env:
       - name: COV_ANALYZE_ARGS
@@ -257,7 +257,7 @@
       chmod -v 0755 /shared/cmd-wrap.sh
 
       # instrument all RUN lines in Dockerfile to be executed through cmd-wrap.sh
-      cstrans-df-run --verbose /shared/cmd-wrap.sh < "$dockerfile_path" > /shared/Containerfile 2> /tmp/cstrans-df-run.log
+      cstrans-df-run --shell-form --verbose /shared/cmd-wrap.sh < "$dockerfile_path" > /shared/Containerfile 2> /tmp/cstrans-df-run.log
       EC=$?
 
       # if we have no RUN lines to instrument, it is not a reason to make the task fail
@@ -284,7 +284,7 @@
   path: /spec/steps/2
   value:
     name: postprocess
-    image: quay.io/redhat-services-prod/sast/coverity:202412.2
+    image: quay.io/redhat-services-prod/sast/coverity:202412.3
     computeResources:
       limits:
         memory: 4Gi
