feat(KONFLUX-6858): add support for generating docker mediaType
While we still produce images with an OCI mediaType by default, some
users may need to generate docker mediaTypes in order to remain
compatible with older functionality. This change lets that setting be
configured.

We are not exposing it as a pipeline parameter by default to encourage
the continued use of OCI mediaTypes.

Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/task/build-image-manifest/0.1/build-image-manifest.yaml
+++ b/task/build-image-manifest/0.1/build-image-manifest.yaml
@@ -43,6 +43,11 @@ spec:
     description: Storage driver to configure for buildah
     name: STORAGE_DRIVER
     type: string
+  - default: oci
+    description: The format for the resulting image's mediaType. Valid values are
+      oci (default) or docker.
+    name: BUILDAH_FORMAT
+    type: string
   results:
   - description: Digest of the image just built
     name: IMAGE_DIGEST
@@ -60,7 +65,7 @@ spec:
   stepTemplate:
     env:
     - name: BUILDAH_FORMAT
-      value: oci
+      value: $(params.BUILDAH_FORMAT)
     - name: COMMIT_SHA
       value: $(params.COMMIT_SHA)
     - name: IMAGE
@@ -123,6 +128,13 @@ spec:
         buildah manifest add $IMAGE "docker://$TOADD" --all
       done
 
+      # While the BUILDAH_FORMAT environment variable can define the push
+      # format, lets be explicit about the format that we want when we push.
+      push_format=oci
+      if [ "${BUILDAH_FORMAT}" == "docker" ]; then
+        push_format=docker
+      fi
+
       status=-1
       max_run=5
       sleep_sec=10
@@ -131,6 +143,7 @@ spec:
         [ "$run" -gt 1 ] && sleep $sleep_sec
         echo "Pushing image to registry"
         buildah manifest push \
+          --format="$push_format" \
           --tls-verify=$TLSVERIFY \
           --digestfile image-digest $IMAGE \
           docker://$IMAGE && break || status=$?
@@ -156,10 +169,10 @@ spec:
       } > "$(results.IMAGE_REF.path)"
       echo -n "${image_manifests:1:-1}" > "$(results.IMAGES.path)"
 
-      IMAGE_DIGEST=$(cat image-digest)
-
-      INDEX_IMAGE_PULLSPEC="${IMAGE}@${IMAGE_DIGEST}"
-      buildah manifest inspect "$INDEX_IMAGE_PULLSPEC" > /index-build-data/manifest_data.json
+      # buildah manifest inspect will always give precedence to the local image.
+      # Since we built this image in the same place as we are inspecting it, we can
+      # just inspect it instead of finding the digest and inspecting the remote image.
+      buildah manifest inspect "$IMAGE" > /index-build-data/manifest_data.json
     securityContext:
       capabilities:
         add:
