--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -29,6 +29,11 @@ spec:
         running 'buildah build'
       type: string
       default: ""
+    - name: BUILDAH_FORMAT
+      description: The format for the resulting image's mediaType. Valid values
+        are oci (default) or docker.
+      type: string
+      default: oci
     - name: BUILD_ARGS
       description: Array of --build-arg values ("arg=value" strings)
       type: array
@@ -196,8 +201,6 @@ spec:
         value: $(params.ADDITIONAL_SECRET)
       - name: ADD_CAPABILITIES
         value: $(params.ADD_CAPABILITIES)
-      - name: BUILDAH_FORMAT
-        value: oci
       - name: BUILD_ARGS_FILE
         value: $(params.BUILD_ARGS_FILE)
       - name: CONTEXT
@@ -291,7 +294,7 @@ spec:
         elif [ -e "$SOURCE_CODE_DIR/$DOCKERFILE" ]; then
           dockerfile_path="$(pwd)/$SOURCE_CODE_DIR/$DOCKERFILE"
         elif [ -e "$DOCKERFILE" ]; then
-          # Instrumented builds (SAST) use this custom dockerffile step as their base
+          # Instrumented builds (SAST) use this custom dockerfile step as their base
           dockerfile_path="$DOCKERFILE"
         elif echo "$DOCKERFILE" | grep -q "^https\?://"; then
           echo "Fetch Dockerfile from $DOCKERFILE"
@@ -598,6 +601,9 @@ spec:
         - mountPath: /mnt/trusted-ca
           name: trusted-ca
           readOnly: true
+      env:
+        - name: BUILDAH_FORMAT
+          value: $(params.BUILDAH_FORMAT)
       script: |
         #!/bin/bash
         set -e
@@ -609,10 +615,19 @@ spec:
           update-ca-trust
         fi
 
+        # While we can build images with the desired format, we will simplify any local
+        # and remote build differences by just performing any necessary conversions at
+        # push time.
+        push_format=oci
+        if [ "${BUILDAH_FORMAT}" == "docker" ]; then
+          push_format=docker
+        fi
+
         retries=5
         # Push to a unique tag based on the TaskRun name to avoid race conditions
         echo "Pushing to ${IMAGE%:*}:${TASKRUN_NAME}"
         if ! buildah push \
+          --format="$push_format" \
           --retry "$retries" \
           --tls-verify="$TLSVERIFY" \
           "$IMAGE" \
@@ -624,6 +639,7 @@ spec:
         # Push to a tag based on the git revision
         echo "Pushing to ${IMAGE}"
         if ! buildah push \
+          --format="$push_format" \
           --retry "$retries" \
           --tls-verify="$TLSVERIFY" \
           --digestfile "/var/workdir/image-digest" "$IMAGE" \
