--- a/task/show-sbom/0.1/show-sbom.yaml
+++ b/task/show-sbom/0.1/show-sbom.yaml
@@ -63,11 +63,11 @@ spec:
       }
 
       RAW_OUTPUT=$(skopeo inspect --no-tags --raw docker://${IMAGE_URL})
-      if [ $(jq -r '.mediaType' <<< $RAW_OUTPUT) == "application/vnd.oci.image.manifest.v1+json" ] ; then
-        ARCHES=""
-      else
+      if [ "$(jq 'has("manifests")' <<< "$RAW_OUTPUT")" == "true" ] ; then
         # Multi arch
         ARCHES=$(jq -r '.manifests[].platform.architecture' <<< $RAW_OUTPUT)
+      else
+        ARCHES=""
       fi
 
       if [ -z "${ARCHES}" ] ; then
