feat(KONFLUX-6858): add support for generating docker mediaType
While we still produce images with an OCI mediaType by default, some
users may need to generate docker mediaTypes in order to remain
compatible with older functionality. This change lets that setting be
configured.

We are not exposing it as a pipeline parameter by default to encourage
the continued use of OCI mediaTypes.

Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -131,6 +131,11 @@ spec:
       format.'
     name: SBOM_TYPE
     type: string
+  - default: oci
+    description: The format for the resulting image's mediaType. Valid values are
+      oci (default) or docker.
+    name: BUILDAH_FORMAT
+    type: string
   - name: image-url
     type: string
   - default: cov-license
@@ -171,8 +176,6 @@ spec:
         cpu: "1"
         memory: 1Gi
     env:
-    - name: BUILDAH_FORMAT
-      value: oci
     - name: STORAGE_DRIVER
       value: $(params.STORAGE_DRIVER)
     - name: HERMETIC
@@ -366,7 +369,7 @@ spec:
       elif [ -e "$SOURCE_CODE_DIR/$DOCKERFILE" ]; then
         dockerfile_path="$(pwd)/$SOURCE_CODE_DIR/$DOCKERFILE"
       elif [ -e "$DOCKERFILE" ]; then
-        # Instrumented builds (SAST) use this custom dockerffile step as their base
+        # Instrumented builds (SAST) use this custom dockerfile step as their base
         dockerfile_path="$DOCKERFILE"
       elif echo "$DOCKERFILE" | grep -q "^https\?://"; then
         echo "Fetch Dockerfile from $DOCKERFILE"
