--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -28,6 +28,11 @@ spec:
         running 'buildah build'
       type: string
       default: ""
+    - name: BUILDAH_FORMAT
+      description: The format for the resulting image's mediaType. Valid values
+        are oci (default) or docker.
+      type: string
+      default: oci
     - name: BUILD_ARGS
       description: Array of --build-arg values ("arg=value" strings)
       type: array
@@ -220,8 +225,6 @@ spec:
         value: $(params.ADDITIONAL_SECRET)
       - name: ADD_CAPABILITIES
         value: $(params.ADD_CAPABILITIES)
-      - name: BUILDAH_FORMAT
-        value: oci
       - name: BUILD_ARGS_FILE
         value: $(params.BUILD_ARGS_FILE)
       - name: CONTEXT
@@ -423,7 +426,7 @@ spec:
         elif [ -e "$SOURCE_CODE_DIR/$DOCKERFILE" ]; then
           dockerfile_path="$(pwd)/$SOURCE_CODE_DIR/$DOCKERFILE"
         elif [ -e "$DOCKERFILE" ]; then
-          # Instrumented builds (SAST) use this custom dockerffile step as their base
+          # Instrumented builds (SAST) use this custom dockerfile step as their base
           dockerfile_path="$DOCKERFILE"
         elif echo "$DOCKERFILE" | grep -q "^https\?://"; then
           echo "Fetch Dockerfile from $DOCKERFILE"
