--- a/renovate.json
+++ b/renovate.json
@@ -52,6 +52,7 @@
         "task/git-clone-oci-ta/**",
         "task/git-clone/**",
         "task/init/**",
+        "task/pnc-prebuild-git-clone-oci-ta/**",
         "task/prefetch-dependencies-oci-ta/**",
         "task/prefetch-dependencies/**",
         "task/push-dockerfile-oci-ta/**",
@@ -197,12 +198,6 @@
         "task/sealights-go-oci-ta/**",
         "task/sealights-nodejs-oci-ta/**",
         "task/sealights-python-oci-ta/**"
-      ]
-    },
-    {
-      "groupName": "pnc",
-      "matchFileNames": [
-        "task/pnc-prebuild-git-clone-oci-ta/**"
       ]
     }
   ],
