fix: retry git fetch --tags on fail
In some situations, git fetch tags may fail for repos with submodules

Signed-off-by: Filip Mudry <fmudry@redhat.com>

--- a/task/git-clone/0.1/git-clone.yaml
+++ b/task/git-clone/0.1/git-clone.yaml
@@ -257,7 +257,10 @@ spec:
 
       if [ "${PARAM_FETCH_TAGS}" = "true" ] ; then
         echo "Fetching tags"
-        git fetch --tags
+        if ! git fetch --tags; then
+          echo "Retrying fetch command..."
+          git fetch --tags
+        fi
       fi
 
   - name: symlink-check
