--- a/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
+++ b/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
@@ -261,7 +261,10 @@ spec:
 
         if [ "${PARAM_FETCH_TAGS}" = "true" ]; then
           echo "Fetching tags"
-          git fetch --tags
+          if ! git fetch --tags; then
+            echo "Retrying fetch command..."
+            git fetch --tags
+          fi
         fi
       securityContext:
         runAsUser: 0
