--- a/task/coverity-availability-check-oci-ta/0.2/kustomization.yaml
+++ b/task/coverity-availability-check-oci-ta/0.2/kustomization.yaml
@@ -9,6 +9,12 @@ patches:
     - op: replace
       path: /metadata/name
       value: coverity-availability-check-oci-ta
+    - op: add
+      path: /metadata/annotations/build.appstudio.redhat.com~1expires-on
+      value: "2025-03-31T00:00:00Z"
+    - op: add
+      path: /metadata/annotations/build.appstudio.redhat.com~1expiry-message
+      value: "Starting with version 0.2, the coverity-availability-check-oci-ta task is deprecated.  Please use coverity-availability-check instead."
   target:
     kind: Task
     name: coverity-availability-check
